--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </head>
 
   <body>
-    <section id="title">
+    <section id="title" class="colored-section">
       <div class="container-fluid">
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
@@ -74,8 +74,8 @@
         <!-- Title -->
 
         <div class="row">
-          <div class="col-lg-6">
-            <h1>Meet new and interesting dogs nearby.</h1>
+          <div class="col-lg-6 title-text">
+            <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
             <button type="button" class="btn btn-dark btn-lg download-button">
               <i class="fab fa-apple"></i> Download
             </button>
@@ -100,23 +100,23 @@
 
     <!-- Features -->
 
-    <section id="features">
+    <section id="features" class="white-section">
       <div class="row">
         <div class="col col-lg-4 col-md-12 feature">
           <i class="fa fa-2x fa-circle-check section2-icons"></i>
-          <h3>Easy to use.</h3>
+          <h3 class="feature-title">Easy to use.</h3>
           <p>So easy to use, even your dog could do it.</p>
         </div>
 
         <div class="col col-lg-4 col-md-12 feature">
           <i class="fa fa-2x fa-bullseye section2-icons"></i>
-          <h3>Elite Clientele</h3>
+          <h3 class="feature-title">Elite Clientele</h3>
           <p>We have all the dogs, the greatest dogs.</p>
         </div>
 
         <div class="col col-lg-4 col-md-12 feature">
           <i class="fa fa-2x fa-heart section2-icons"></i>
-          <h3>Guaranteed to work.</h3>
+          <h3 class="feature-title">Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
         </div>
       </div>
@@ -124,7 +124,7 @@
 
     <!-- Testimonials -->
 
-    <section id="testimonials">
+    <section id="testimonials" class="colored-section">
       <div
         id="carouselExampleControls"
         class="carousel slide"
@@ -132,7 +132,7 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <h2>
+            <h2 class="testimonial-text">
               I no longer have to sniff other dogs for love. I've found the
               hottest Corgi on TinDog. Woof.
             </h2>
@@ -179,7 +179,7 @@
 
     <!-- Press -->
 
-    <section id="press">
+    <section id="press" class="colored-section">
       <img class="press-image" src="images/techcrunch.png" alt="tc-logo" />
       <img class="press-image" src="images/tnw.png" alt="tnw-logo" />
       <img
@@ -192,65 +192,80 @@
 
     <!-- Pricing -->
 
-    <section id="pricing">
-      <h2>A Plan for Every Dog's Needs</h2>
+    <section id="pricing" class="white-section">
+      <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
       <p>Simple and affordable price plans for your and your dog.</p>
 
       <div class="row">
         <div class="col-lg-4 col-md-6 pricing-col">
-        <div class="card">
-          <div class="card-header"><h3>Chihuahua</h3></div>
-          <div class="card-body d-grid">
-            <h2>Free</h2>
-            <p>5 Matches Per Day</p>
-            <p>10 Messages Per Day</p>
-            <p>Unlimited App Usage</p>
-            <button type="button" class="btn btn-lg btn-outline-dark">Sign Up</button>
+          <div class="card">
+            <div class="card-header"><h3>Chihuahua</h3></div>
+            <div class="card-body d-grid">
+              <h2 class="price-text">Free</h2>
+              <p>5 Matches Per Day</p>
+              <p>10 Messages Per Day</p>
+              <p>Unlimited App Usage</p>
+              <button type="button" class="btn btn-lg btn-outline-dark">
+                Sign Up
+              </button>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col-lg-4 col-md-6 pricing-col">
-        <div class="card">
-          <div class="card-header"><h3>Labrador</h3></div>
-          <div class="card-body d-grid">
-            <h2>$49 / mo</h2>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
-            <button type="button" class="btn btn-lg btn-dark">Sign Up</button>
+        <div class="col-lg-4 col-md-6 pricing-col">
+          <div class="card">
+            <div class="card-header"><h3>Labrador</h3></div>
+            <div class="card-body d-grid">
+              <h2 class="price-text">$49 / mo</h2>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <p>Unlimited App Usage</p>
+              <button type="button" class="btn btn-lg btn-dark">Sign Up</button>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col-lg-4 pricing-col">
-        <div class="card">
-          <div class="card-header"><h3>Mastiff</h3></div>
-          <div class="card-body d-grid">
-            <h2>$99 / mo</h2>
-            <p>Pirority Listing</p>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
-            <button type="button" class="btn btn-lg btn-dark">Sign Up</button>
+        <div class="col-lg-4 pricing-col">
+          <div class="card">
+            <div class="card-header"><h3>Mastiff</h3></div>
+            <div class="card-body d-grid">
+              <h2 class="price-text">$99 / mo</h2>
+              <p>Pirority Listing</p>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <p>Unlimited App Usage</p>
+              <button type="button" class="btn btn-lg btn-dark">Sign Up</button>
+            </div>
           </div>
         </div>
-      </div>
       </div>
     </section>
 
     <!-- Call to Action -->
 
-    <section id="cta">
-      <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+    <section id="cta" class="colored-section">
+      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <button type="button" class="btn btn-dark btn-lg download-button">
+        <i class="fab fa-apple"></i> Download
+      </button>
+      <button
+        type="button"
+        class="btn btn-daner btn-lg btn-light download-button"
+      >
+        <i class="fa-brands fa-google-play"></i> Download
+      </button>
     </section>
 
     <!-- Footer -->
 
-    <footer id="footer">
-      <p>© Copyright TinDog</p>
+    <footer id="footer" class="white-section">
+      <div class="icons">
+        <i class="fab fa-twitter myicon"></i>
+        <i class="fab fa-facebook myicon"></i>
+        <i class="fab fa-instagram myicon"></i>
+        <i class="fa fa-envelope myicon"></i>
+      </div>
+      <p>© Copyright 2022 TinDog</p>
     </footer>
   </body>
 </html>
